--- a/modulo3/desafios/d012/estilo/style.css
+++ b/modulo3/desafios/d012/estilo/style.css
@@ -1,11 +1,21 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+    --font1: Verdana, Geneva, Tahoma, sans-serif;
+    --font2: 'Passion One', cursive;
+    --font3: 'Sriracha', cursive;
+}
 
 * {
     margin: 0;
     padding: 0;
+    font-size: 1em;
 }
 
 html, body {
+    font-family: var(--font1);
     min-height: 100vh;
     background-color: darkgray;
 }
@@ -17,8 +27,10 @@ header {
 }
 
 header > h1 {
+    font-family: var(--font2);
     padding-top: 50px;
     font-variant: small-caps;
+    font-size: 10vw;
 }
 
 header > p {
@@ -36,6 +48,8 @@ header a:hover, footer a:hover {
 }
 
 section {
+    font-size: 3.5vw;
+    font-family: var(--font3);
     padding-top: 10vh;
     padding-bottom: 10vh;
     line-height: 2em;
@@ -53,7 +67,8 @@ section.imagem {
 }
 
 section.imagem > p {
-    width: 400px;
+    display: inline-block;
+    padding: 10px;
     background-color: rgba(0, 0, 0, 0.253);
 
 }
